--- a/todo-list/src/App.css
+++ b/todo-list/src/App.css
@@ -1,3 +1,6 @@
+* {
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+}
 h1 {
   text-align: center;
 }
@@ -5,6 +8,12 @@ h1 {
   width: 500px;
   margin: 60px auto;
 }
+
+.todo-text {
+  font-size: 16px;
+  margin-left: 25px;
+}
+
 form, .todo {
   border: 1px solid grey;
   padding: 10px 20px;
@@ -29,10 +38,11 @@ button {
   font-size: 16px;
   background-color: rgb(217, 60, 35);
   color: #fff;
-  border-radius: 8px;
+  border-radius: 5px;
   border: none;
   padding: 8px 16px;
   cursor: pointer;
+  margin: 0 5px;
 }
 button:hover {
   background-color: rgb(173, 47, 28);
